# sked_parser

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  Makefile  README.md  config.yaml  pyproject.toml  requirements.txt  requirements_dev.txt  secrets.example.yaml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md  renovate.json
.github/workflows/: python-package.yml
resources/: example_desc.txt  example_urls.txt
sked_parser/: __init__.py  __main__.py  app.py  cli.py  config.yaml  main.py  scraper.py  sked_parser.py
tests/: __init__.py  test_scraper.py  test_sked_parser.py
